--- a/Stable_Diffusion_Colab_v0_16.ipynb
+++ b/Stable_Diffusion_Colab_v0_16.ipynb
@@ -21,25 +21,20 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "J01cBPX_O0wF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "\n",
-        "**IMPORTANT**\n",
-        "```\n",
-        "!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\n",
-        "\n",
-        "!!!   This will only work if you have access to the models.                   !!!\n",
-        "\n",
-        "!!!   It currently requires a token from Hugging Face.                        !!!  \n",
-        "\n",
-        "!!!   Once released publicly, I will change it so that anyone can use this.   !!!\n",
-        "\n",
-        "!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\n",
-        "```\n",
-        "\n",
-        "Tring to make this a one-stop shop for various programs + a GOTO guide on how to install everything locally. If you have suggestions or implementations, feel free to contact me on Discord. NOP#1337\n",
-        "\n",
-        "I'm in GPU jail as of August 21st, if I'm not out of it by weight drop, then DM me. Might need some help setting this up since I won't be able to test my changes\n",
+        "Tring to make this a one-stop shop for various programs + a GOTO guide on how to install everything locally. If you have suggestions, bug reports, or implementations, feel free to contact me on Discord. NOP#1337\n",
         "\n",
         "Changelog:\n",
         "- v0.1: Colab creation\n",
@@ -67,7 +62,15 @@
         "Credits:\n",
         "\n",
         "- Pierre#2575 and Ragnall#1177 for the default prompt\n",
-        "- Original TXT2IMG Notebook: Lucas Ferreira da Silva, Madams, Greg Turk"
+        "- Original TXT2IMG Notebook: Lucas Ferreira da Silva, Madams, Greg Turk\n",
+        "\n",
+        "\n",
+        "\n",
+        "#**IMPORTANT**\n",
+        "\n",
+        "You will need a huggingface account, username, and token.\n",
+        "Grab your token from: https://huggingface.co/settings/tokens\n",
+        "It should be the \"User Access Token\"\n"
       ],
       "metadata": {
         "id": "_Y6RXjS1tTji"
@@ -231,7 +234,6 @@
     {
       "cell_type": "code",
       "source": [
-        "new_file = \"\"\n",
         "with open('/usr/local/lib/python3.7/dist-packages/diffusers/pipelines/stable_diffusion/safety_checker.py','w') as file:\n",
         "  file.write('''import numpy as np\n",
         "import torch\n",
@@ -328,16 +330,17 @@
         "## How to run Offline\n",
         "\n",
         "Download and install:\n",
-        "https://developer.nvidia.com/cuda-11-6-2-download-archive\n",
+        "https://developer.nvidia.com/cuda-11-6-2-download-archive and\n",
+        "https://pytorch.org/get-started/locally/\n",
         "\n",
         "in cmd or terminal:\n",
         "\n",
         "```\n",
         "git lfs install\n",
         "GIT_LFS_SKIP_SMUDGE=0\n",
-        "git lfs clone https://<huggingface_username>:<huggingface_token>@huggingface.co/CompVis/stable-diffusion-v1-3-diffusers\n",
+        "git lfs clone https://<huggingface_username>:<huggingface_token>@huggingface.co/CompVis/stable-diffusion-v1-4\n",
         "echo <huggingface_token> | huggingface-cli login\n",
-        "pip install -U git+https://github.com/huggingface/diffusers.git@e30e1b89d0a85073f8f5338b86445bf8ed892086\n",
+        "pip install -U git+https://github.com/huggingface/diffusers.git\n",
         "pip install transformers\n",
         "mkdir diffusers_output\n",
         "pip install pytorch-pretrained-bert\n",
@@ -356,7 +359,7 @@
         "import time\n",
         "from diffusers import StableDiffusionPipeline, LMSDiscreteScheduler\n",
         "from PIL import Image\n",
-        "model_id = \"CompVis/stable-diffusion-v1-3-diffusers\"\n",
+        "model_id = \"CompVis/stable-diffusion-v1-4\"\n",
         "pipe = StableDiffusionPipeline.from_pretrained(model_id, use_auth_token=True)\n",
         "OUTDIR = 'diffusers_output'\n",
         "\n",
@@ -393,7 +396,7 @@
         "        img.show()\n",
         "```\n",
         "\n",
-        "\n"
+        "If you want to disable the NSFW check, see above\n"
       ],
       "metadata": {
         "id": "Gr_GaJY7Ldq7"
@@ -447,7 +450,7 @@
         "!git lfs install\n",
         "!GIT_LFS_SKIP_SMUDGE=0\n",
         "# Will take a long time\n",
-        "!git lfs clone https://$huggingface_username:$huggingface_token@huggingface.co/CompVis/stable-diffusion-v-1-3\n",
+        "!git lfs clone https://$huggingface_username:$huggingface_token@huggingface.co/CompVis/stable-diffusion-v-1-4-original\n",
         "import numpy as np\n",
         "import os\n",
         "from PIL import Image\n",
@@ -487,7 +490,7 @@
         "SCALE = 13 #@param {type:\"slider\", min:0, max:50, step:0.5}\n",
         "NUM_SAMPLES = 1 #@param {type:\"slider\", min:1, max:4, step:1} \n",
         "NUM_ITERS = 1 #@param {type:\"slider\", min:1, max:20, step:1} \n",
-        "CHECKPOINT = 'sd-v1-3.ckpt' #@param [\"sd-v1-3-full-ema.ckpt\",\"sd-v1-3.ckpt\"]\n",
+        "CHECKPOINT = 'sd-v1-4.ckpt' #@param [\"sd-v1-4.ckpt\"]\n",
         "PRECISION = \"autocast\" #@param [\"full\",\"autocast\"]\n",
         "LATENT_SAMPLES = 4 #@param {type:\"slider\", min:1, max:20, step:1} \n",
         "DOWNSAMPLING_FACTOR = 8 #@param {type:\"slider\", min:1, max:20, step:1} \n",
@@ -495,14 +498,14 @@
         "DDIM_ETA = 0.15 #@param {type:\"slider\", min:0, max:1, step:0.01}\n",
         "SKIP_SAVE = False #@param {type:\"boolean\"}\n",
         "USE_LAION400M = False #@param {type:\"boolean\"}\n",
-        "USE_DRIVE_FOR_PICS = True #@param {type:\"boolean\"}\n",
+        "USE_DRIVE_FOR_PICS = False #@param {type:\"boolean\"}\n",
         "DRIVE_PIC_DIR = \"AI_PICS\" #@param {type:\"string\"}\n",
         "# more possible image sizes: \n",
         "# 64 128 192 256 320 384 448 512 576 640 704 768 832 896 960 1024 1088 1152 1216 1280\n",
         "import os\n",
         "import random\n",
         "if SEED == 0:\n",
-        "  SEED = random.randint(0,  )\n",
+        "  SEED = random.randint(0, 4294967295)\n",
         "if USE_DRIVE_FOR_PICS and not os.path.exists('/content/drive'):\n",
         "  from google.colab import drive\n",
         "  drive.mount('/content/drive')\n",
@@ -535,11 +538,14 @@
         "  img.thumbnail((target_size,target_size))\n",
         "  display (img)\n",
         "print (\"Starting to generate \" + str(NUM_ITERS * NUM_SAMPLES) + \" images\")\n",
-        "model_ckpt = f'{root_model}/stable-diffusion-v-1-3/{CHECKPOINT}'\n",
+        "model_ckpt = f'{root_model}/stable-diffusion-v-1-4-original/{CHECKPOINT}'\n",
         "import time\n",
         "epoch_time = int(time.time())\n",
-        "with open(f'{OUTDIR}/samples/{epoch_time}_promptinput_seed_{SEED}.txt', 'w') as file:\n",
-        "  file.write(PROMPT)\n",
+        "try:\n",
+        "  with open(f'{OUTDIR}/samples/{epoch_time}_promptinput_seed_{SEED}.txt', 'w') as file:\n",
+        "    file.write(PROMPT)\n",
+        "except FileNotFoundError:\n",
+        "  !mkdir $OUTDIR/samples/\n",
         "PROMPT = PROMPT.strip('\"')\n",
         "!python scripts/txt2img.py --C $LATENT_SAMPLES --f $DOWNSAMPLING_FACTOR --seed $SEED $PLMS $SKIP_CONF $LAION_CONF --prompt \"$PROMPT\" --ddim_step $STEPS --W $WIDTH --H $HEIGHT --n_samples $NUM_SAMPLES --n_iter $NUM_ITERS --ddim_step $STEPS --outdir $OUTDIR --ckpt $model_ckpt --precision $PRECISION --scale $SCALE\n",
         "try:\n",
